todo/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
spec:
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: cache-volume
          emptyDir: {}
      containers:
        - name: todo-app
          image: dawidl022/todo-app:sha-d6fe923
          volumeMounts:
            - mountPath: /cache
              name: cache-volume
