todo/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-svc
spec:
  type: NodePort
  selector:
    app: todo-app
  ports:
    - port: 8080
      targetPort: 8080 
      protocol: TCP
      nodePort: 30080
